--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -1,5 +1,60 @@
-body {
-  background-color: red;
-  color: blue; }
+@charset "UTF-8";
+.header {
+  font-family: Arial, Helvetica, sans-serif; }
+
+.header__logo {
+  text-align: center; }
+
+.header__logo .header_img {
+  max-width: 350px; }
+
+.header__menu .menu__list {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #eaeaeb;
+  border-bottom: 1px solid #eaeaeb;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  padding: 20px 0; }
+
+.header__menu .menu__list .menu_links {
+  position: relative; }
+
+.header__menu .menu__list .menu_links:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 15px;
+  width: 1px;
+  background-color: #eaeaeb; }
+
+.header__menu .menu__list .menu_links .menu__link {
+  padding: 0 25px;
+  color: #464646; }
+
+.header__menu .menu__list .menu_links .menu__link:hover {
+  color: #A050BE; }
+
+/*
+Este trecho de estilo se refere ao rodapé do blog
+*/
+.footer {
+  text-align: center;
+  padding: 20px 0;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%); }
+
+.footer .footer__logo {
+  max-width: 100px; }
+
+.footer .footer__txt {
+  margin: auto;
+  font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
