--- a/bootstrap/src/style.css
+++ b/bootstrap/src/style.css
@@ -1,3 +1,7 @@
+.card-largura {
+  max-width: 18rem;
+}
+
 .imagem-carrosel-um {
   object-fit: cover;
   object-position: 0 80%;
@@ -15,8 +19,20 @@
 }
 
 .cor-especial {
-  color: darkred;
+  color: darkred !important;
   font-family: 'Pacifico', cursive;
 }
 
+.botao-cor-especial {
+  background-color: darkred;
+  color: white;
+}
 
+.borda-cor-especial {
+  border-color: darkred;
+}
+
+.card-posicao-imagem {
+  object-fit: cover;
+  height: 200px;
+}
